# tiralabra

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  tuntikirjanpito.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: index.py
src/app/: app.py
src/data/: load_data.py
src/tests/: app_test.py  data_test.py
src/ui/: ui.py
